[workspace]
members = [
	"car-mirror",
	"car-mirror-benches",
	"car-mirror-wasm",
	"examples"
]

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3.5"
bytes = "1.4"
futures = "0.3"
libipld = "0.16"
libipld-core = "0.16"
serde_ipld_dagcbor = "0.4"
wnfs-common = { version = "0.2.0" }

# See https://doc.rust-lang.org/cargo/reference/profiles.html for more info.
[profile.release.package.car-mirror-wasm]
# Perform optimizations on all codegen units.
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s" # or 'z' to optimize "aggressively" for size
# Strip debug symbols
# "symbols" issue: https://github.com/rust-lang/rust/issues/93294
## strip = "debuginfo"
# Amount of debug information.
# 0/false: no debug info at all; 1: line tables only; 2/true: full debug info
## debug = false

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
opt-level = 3
