[workspace]
members = [
	"car-mirror",
	"car-mirror-axum",
	"car-mirror-benches",
	"car-mirror-reqwest",
	"car-mirror-wasm",
]

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3.5"
bytes = "1.4"
futures = "0.3"
ipld-core = { version = "0.4" }
serde_bytes = "0.11"
serde_ipld_dagcbor = "0.6"
serde_json = "1.0"
tokio-util = "0.7.8"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4" }
wnfs-common = { version = "0.2.0" }
wnfs-unixfs-file = { version = "0.2.0" }

# See https://doc.rust-lang.org/cargo/reference/profiles.html for more info.
[profile.release.package.car-mirror-wasm]
# Perform optimizations on all codegen units.
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s" # or 'z' to optimize "aggressively" for size
# Strip debug symbols
# "symbols" issue: https://github.com/rust-lang/rust/issues/93294
## strip = "debuginfo"
# Amount of debug information.
# 0/false: no debug info at all; 1: line tables only; 2/true: full debug info
## debug = false

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
opt-level = 3

[patch.crates-io]
wnfs-common = { git = "https://github.com/wnfs-wg/rs-wnfs.git", branch = "matheus23/updates" }
wnfs-unixfs-file = { git = "https://github.com/wnfs-wg/rs-wnfs.git", branch = "matheus23/updates" }
