[package]
name = "car-mirror-benches"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]

[dependencies]
car-mirror = { path = "../car-mirror", version = "0.1", features = ["test_utils"] }
wnfs-common = "0.1.23"
async-std = { version = "1.11", features = ["attributes"] }
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.4", default-features = false }

[[bench]]
name = "in_memory"
harness = false
