[package]
name = "car-mirror-benches"
version = "0.1.0"
publish = false
edition = "2024"
authors = ["Philipp Krüger <philipp@fission.codes>"]

[dependencies]
anyhow = { workspace = true }
async-std = { version = "1.11", features = ["attributes"] }
bytes = { workspace = true }
car-mirror = { path = "../car-mirror", version = "0.1", features = ["test_utils", "quick_cache"] }
ipld-core = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
wnfs-common = { workspace = true }

[dev-dependencies]
criterion = { version = "0.4", default-features = false }

[[bench]]
name = "in_memory"
harness = false

[[bench]]
name = "artificially_slow_blockstore"
harness = false

[[bench]]
name = "simulated_latency"
harness = false
