[package]
name = "car-mirror-cli"
version = "0.1.0"
description = "CAR Mirror CLI"
keywords = []
categories = []
include = ["/src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "Apache-2.0 or MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/car-mirror"
repository = "https://github.com/fission-codes/rs-car-mirror/tree/main/car-mirror"
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]

[[bin]]
name = "carmirror"
path = "src/main.rs"
doc = true

[dependencies]
anyhow = "1.0"
proptest = { version = "1.1", optional = true }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
proptest = "1.1"

[features]
default = []
test_utils = ["proptest"]

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
