[package]
name = "car-mirror-reqwest"
version = "0.1.0"
description = "Adapter for using car-mirror with reqwest-middleware"
keywords = []
categories = []
include = ["/src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.66"
documentation = "https://docs.rs/car-mirror-reqwest"
repository = "https://github.com/fission-codes/rs-car-mirror/tree/main/car-mirror-reqwest"
authors = ["Philipp Krüger <philipp@fission.codes>"]

[lib]
path = "src/lib.rs"
doctest = true

[dependencies]
anyhow = "1.0"
bytes = "1.4"
car-mirror = { version = "0.1", path = "../car-mirror" }
futures = "0.3"
libipld = "0.16"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls", "stream"] }
reqwest-middleware = "0.2.4"
thiserror = "1.0"
tokio-util = "0.7"
tracing = "0.1"
wnfs-common = { workspace = true }

[dev-dependencies]
async-std = { version = "1.11", features = ["attributes"] }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
test-strategy = "0.3"
testresult = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "parking_lot", "registry"] }

[features]

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
