[package]
name = "car-mirror-wasm"
version = "0.1.0"
description = "Rust implementation of the CAR Mirror protocol"
keywords = []
categories = []
include = ["/src", "/README.md", "/LICENSE-APACHE", "/LICENSE-MIT"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.75"
documentation = "https://docs.rs/car-mirror-wasm"
repository = "https://github.com/fission-codes/rs-car-mirror/tree/main/car-mirror-wasm"
authors = ["Philipp Krüger <philipp@fission.codes>"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
car-mirror = { path = "../car-mirror", version = "0.1" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1" }
futures = { workspace = true }
ipld-core = { workspace = true }
js-sys = { version = "0.3" }
serde-wasm-bindgen = "0.6.5"
serde_json = { workspace = true }
tokio-util = { workspace = true, features = ["compat", "io"] }
tracing = "0.1"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-streams = "0.4"
web-sys = { version = "0.3" }
wnfs-common = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
